# cloud

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: launch.json
console/: .env.demo  .env.example  .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
deploy/: Makefile  README.md  kustomization.yaml  smoke-test.sh
design/: README.md  cluster-access-denied.html  cluster-connections.html  cluster-models.html  cluster-overview.html  desktop-devices-panel.html  desktop-dispatch.html  desktop-remote-session.html  device-list.html  device-session.html  device-welcome.html  index.html  new-project.html  not-found.html  project-settings-layout-options.html  project-settings-option-a.html  project-settings-option-b.html  project-settings-option-c.html  project-workspace.html  projects-empty.html  projects.html  setup.html  sign-in.html  welcome.html
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/plugins/secure-storage/: Cargo.toml  build.rs
mobile/src-tauri/plugins/secure-storage/android/: .gitignore  build.gradle.kts
mobile/src-tauri/plugins/secure-storage/android/src/main/java/: SecureStoragePlugin.kt
mobile/src-tauri/plugins/secure-storage/ios/: Package.swift
mobile/src-tauri/plugins/secure-storage/ios/Sources/: SecureStoragePlugin.swift
mobile/src-tauri/plugins/secure-storage/src/: lib.rs  mobile.rs
mobile/src-tauri/src/: lib.rs  main.rs
(+650 files in other folders)
