[package]
name = "jcloud-mobile"
version = "0.0.79"
description = "jcode Cloud mobile — device relay client (Tauri 2 iOS/Android)"
authors = ["jcode"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jcloud_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "charset", "http2"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-jcode-secure-storage = { path = "plugins/secure-storage" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
