[package]
name = "tauri-plugin-jcode-secure-storage"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-jcode-secure-storage"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = "2"
thiserror = "2"

